<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:padding="8dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/operationField"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- поле знака операции -->
    <TextView
        android:id="@+id/operationField"
        android:layout_width="85dp"
        android:layout_height="32dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/resultField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- поле ввода чисел -->
    <EditText
        android:id="@+id/numberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/firstButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/numberField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_7"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_8"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_9"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/division"
            android:onClick="onOperationClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/secondButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/firstButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_4"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_5"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_6"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/multiply"
            android:onClick="onOperationClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/secondButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_1"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_2"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_3"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/minus"
            android:onClick="onOperationClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/forthButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/thirdButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/_0"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/double_value"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/plus"
            android:onClick="onOperationClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/equal"
            android:onClick="onOperationClick"
            android:layout_marginHorizontal="8sp"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ToHome"
        android:onClick="CloseActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>