<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".InverseTrigonometry">


    <Button
        android:id="@+id/arcsin_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="48dp"
        android:text="@string/arcsin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value" />

    <Button
        android:id="@+id/arccos_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:text="@string/arccos"
        app:layout_constraintStart_toEndOf="@+id/arcsin_btn"
        app:layout_constraintTop_toTopOf="@+id/arcsin_btn" />

    <Button
        android:id="@+id/arctg_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:text="@string/arctg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arcsin_btn" />

    <Button
        android:id="@+id/arcctg_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:text="@string/arcctg"
        app:layout_constraintStart_toEndOf="@+id/arctg_btn"
        app:layout_constraintTop_toTopOf="@+id/arctg_btn" />

    <EditText
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/enter_value"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#43A047"
        android:textColorHint="#43A047"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/angle"
        android:textAlignment="center"
        android:textColor="#43A047"
        android:textColorHint="#43A047"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arctg_btn" />

    <Button
        android:id="@+id/inverseTrigonometry"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="CloseActivity"
        android:text="@string/f_trig"
        app:layout_constraintBottom_toTopOf="@+id/toHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angle" />

    <Button
        android:id="@+id/toHome"
        android:layout_width="169dp"
        android:layout_height="92dp"
        android:layout_marginBottom="72dp"
        android:onClick="GotoMain"
        android:text="@string/ToHome"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>