<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CC_activity"
    android:background="@color/background">


    <EditText
        android:id="@+id/InputNumber"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/text_input_number"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#43A047"
        android:textColorHint="#43A047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/System"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:ems="10"
        android:maxLength="2"
        android:hint="@string/text_system"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#66BB6A"
        android:textColorHint="#43A047"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/InputNumber"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/NewSystem"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="6dp"
        android:ems="10"
        android:maxLength="2"
        android:hint="@string/text_new_system"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#43A047"
        android:textColorHint="#43A047"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/System"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/res"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/text_result"
        android:textAlignment="center"
        android:textColor="#43A047"
        android:textColorHint="#43A047"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <Button
        android:id="@+id/Transfer"
        android:layout_width="224dp"
        android:layout_height="133dp"
        android:layout_marginBottom="30dp"
        android:onClick="onTransferClick"
        android:text="@string/text_transfer"
        app:layout_constraintBottom_toTopOf="@+id/res"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewSystem"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/ToHome"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:layout_marginTop="30dp"
        android:onClick="CloseActivity"
        android:text="@string/text_tohome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/res"
        app:layout_constraintVertical_bias="0.857"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/maxsystem"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:text="@string/text_maxSystem"
        android:textColor="#43A047"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/NewSystem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputNumber" />

    <Button
        android:id="@+id/clear"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:onClick="ClearArea"
        android:text="@string/text_clear"
        app:layout_constraintBottom_toTopOf="@+id/ToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/res" />
</androidx.constraintlayout.widget.ConstraintLayout>