<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:text="@string/appname"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#43A047"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Calculator"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="30dp"
        android:text="@string/calculator"
        android:textColor="#ffffff"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/c_transfer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/c_transfer"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="30dp"
        android:text="@string/transferCC"
        android:textColor="#ffffff"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/GetGraphics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/GetGraphics"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="30dp"
        android:text="@string/graphics_text"
        android:textColor="#ffffff"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/trigonometry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/trigonometry"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="30dp"
        android:text="@string/triganometry_text"
        android:textColor="#ffffff"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/GuideBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/GuideBook"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="20dp"
        android:text="@string/guide_text"
        android:textColor="#ffffff"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>